--- a/src/app/components/launch/launch.component.scss
+++ b/src/app/components/launch/launch.component.scss
@@ -1,6 +1,3 @@
-// .card-img-top{
-//   padding: 20px;
-// }
 .img-container {
   margin: 20px;
   background-color: #f2f2f2;
@@ -30,15 +27,15 @@
   body {
     background-color: lightblue;
   }
-  // .card{
-  //  width: 15rem;
-  // }
+  .card {
+    width: 100%;
+  }
 }
 @media only screen and (min-width: 1025px) {
   body {
     background-color: lightblue;
   }
-  // .card{
-  //  width: 16rem;
-  // }
+  .card {
+    width: 100%;
+  }
 }
