some minor changes

--- a/src/app/components/launch/launch.component.html
+++ b/src/app/components/launch/launch.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" (click)="onClick();">
   <div class="img-container text-center">
     <div *ngIf="loading" style="min-height:216px">
       <img
