--- a/src/app/home/launch-details/launch-details.component.html
+++ b/src/app/home/launch-details/launch-details.component.html
@@ -1,1 +1,10 @@
-<p>launch-details works!</p>
+<ng-container *ngIf="(rowData$ | async) as rowData">
+    
+    <div class="card" style="width: 80%;margin: auto;">
+        <div class="card-body">
+            <media-details [links]="rowData.links"></media-details>
+            <h5 class="card-title">{{rowData?.mission_name}}</h5>
+            <p class="card-text">{{rowData?.details}}</p>
+        </div>
+    </div>
+</ng-container>
